# Yuki_bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  start.sh  start_en.bat  启动.bat  工具使用说明.txt  知识库构建工具.bat
botGUI/: __init__.py  build_exe.py  main.py  version_info.py  version_info.txt
botGUI/core/: __init__.py  api_client.py  config_io.py  process_manager.py  theme.py
botGUI/ui/: __init__.py  main_window.py
botGUI/ui/pages/: __init__.py  about_page.py  (+4 more)
configs/: ai_model_config.toml  bot_config.toml  music_config.toml  musictext_config.toml  retrieval_config.toml  role_play_config.toml  web_config.toml
data/: .gitkeep  cleaned_knowledge.json
emoji/: .gitkeep
knowledge_docs/: README.md
src/: __init__.py
src/core/: config_manager.py  logger.py  message_splitter.py  model_logger.py  persona_guard.py  security.py  temp_blacklist.py
src/models/: api_types.py  config_schema.py
src/plugins/: __init__.py
src/services/: __init__.py  ai_manager.py  emoji_service.py  http_client.py  injection_guard_service.py  memory_gc_service.py  retrieval_strategy.py  stats_service.py  vector_service.py  vector_service_chroma.py.bak  vision_caption_service.py
src/web/: __init__.py  router.py
tools/: ai_cleanup_rag_graph.py  emoji_manager.py  kb_cleaner.py  memory_cleanup.py  migrate_chroma_to_faiss.py  migrate_memory_schema.py  migrate_to_new_memory_system.py  rebuild_faiss_indices.py  rebuild_knowledge_base.py  test_ai_cleanup.py
tools/data/: knowledge_graph.db
tools/kb_builder/: build_kb.py
(+45 files in other folders)
