[project]
name = "yuki-bot"
version = "1.0.0"
description = "A multi-model async QQ bot powered by NoneBot2"
authors = [{name = "Yuki Bot Team"}]
requires-python = ">=3.9"
dependencies = [
    "nonebot2[fastapi]>=2.1.0",
    "nonebot-adapter-onebot>=2.3.0",
    "nonebot-plugin-apscheduler>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
